# greeter_robot

./: .gitignore  CMakeLists.txt  README.md  areaA.pgm  areaA.yaml  faces.csv  package.xml
data/: 100.pgm  1000.pgm  1003.pgm  1007.pgm  1008.pgm  101.pgm  1012.pgm  1016.pgm  1017.pgm  102.pgm  1020.pgm  1022.pgm  1023.pgm  1027.pgm  1028.pgm  103.pgm  1030.pgm  1032.pgm  1039.pgm  1044.pgm  1047.pgm  1051.pgm  1052.pgm  1057.pgm  1059.pgm  1060.pgm  1061.pgm  1062.pgm  1064.pgm  1067.pgm  107.pgm  1070.pgm  1074.pgm  1077.pgm  1079.pgm  1081.pgm  1084.pgm  1090.pgm  1091.pgm  1096.pgm  (+898 more)
data/Anne/: 0.pgm  1.pgm  10.pgm  100.pgm  101.pgm  102.pgm  104.pgm  106.pgm  107.pgm  1073.pgm  108.pgm  1080.pgm  1083.pgm  1089.pgm  109.pgm  1090.pgm  1091.pgm  1092.pgm  1093.pgm  1094.pgm  1095.pgm  11.pgm  110.pgm  111.pgm  114.pgm  115.pgm  118.pgm  12.pgm  120.pgm  122.pgm  123.pgm  125.pgm  126.pgm  127.pgm  128.pgm  129.pgm  13.pgm  130.pgm  131.pgm  132.pgm  (+253 more)
data/Lauren/: 0.pgm  1.pgm  10.pgm  11.pgm  12.pgm  13.pgm  14.pgm  15.pgm  16.pgm  17.pgm  18.pgm  19.pgm  2.pgm  20.pgm  21.pgm  22.pgm  23.pgm  24.pgm  25.pgm  26.pgm  27.pgm  28.pgm  29.pgm  3.pgm  30.pgm  31.pgm  32.pgm  33.pgm  34.pgm  35.pgm  36.pgm  37.pgm  38.pgm  39.pgm  4.pgm  40.pgm  41.pgm  42.pgm  43.pgm  44.pgm  (+12 more)
data/Leah/: 10.pgm  11.pgm  12.pgm  13.pgm  14.pgm  15.pgm  16.pgm  17.pgm  18.pgm  19.pgm  2.pgm  20.pgm  21.pgm  22.pgm  23.pgm  24.pgm  25.pgm  26.pgm  27.pgm  28.pgm  29.pgm  3.pgm  30.pgm  31.pgm  32.pgm  33.pgm  34.pgm  35.pgm  36.pgm  37.pgm  38.pgm  39.pgm  4.pgm  40.pgm  41.pgm  42.pgm  43.pgm  44.pgm  45.pgm  46.pgm  (+10 more)
data/Ming/: 0.pgm  1.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm
data/anne_oursler/: 1.pgm  12.pgm  14.pgm  16.pgm  17.pgm  18.pgm  19.pgm  20.pgm  21.pgm  24.pgm  27.pgm  29.pgm  3.pgm  30.pgm  31.pgm  32.pgm  34.pgm  4.pgm  40.pgm  43.pgm  45.pgm  46.pgm  48.pgm  50.pgm  52.pgm  6.pgm  7.pgm  9.pgm
data/lauren_dierker/: 1.pgm  10.pgm  11.pgm  12.pgm  13.pgm  14.pgm  15.pgm  16.pgm  17.pgm  18.pgm  2.pgm  20.pgm  22.pgm  24.pgm  25.pgm  26.pgm  28.pgm  29.pgm  3.pgm  30.pgm  33.pgm  6.pgm  7.pgm  8.pgm  9.pgm
data/leah_holden/: 0.pgm  1.pgm  10.pgm  11.pgm  12.pgm  14.pgm  15.pgm  16.pgm  17.pgm  18.pgm  19.pgm  2.pgm  20.pgm  21.pgm  22.pgm  23.pgm  24.pgm  25.pgm  26.pgm  28.pgm  6.pgm  7.pgm  9.pgm
data/welcomemessages/: unknownWelcome.sh  unknownWelcomePart1.sh  unknownWelcomePart2.sh  welcome.sh  welcomeAnne.sh  welcomeLauren.sh  welcomelauren_dierker.sh
include/: face_detection.h  face_recognition.h  fps.h  image_proc.h  storage.h  text.h
launch/: greeter_robot.launch
src/: face_detection.cpp  face_recognition.cpp  image_proc.cpp  main.cpp  main_detection.cpp  main_recognition.cpp  storage.cpp  text.cpp
src/friendly_faces/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/friendly_faces/data/: faces.csv
src/friendly_faces/data/anne_oursler/: 12.pgm  13.pgm  16.pgm  22.pgm  25.pgm  32.pgm  35.pgm  38.pgm  4.pgm  43.pgm  52.pgm  9.pgm
src/friendly_faces/data/lauren_dierker/: 1.pgm  13.pgm  14.pgm  15.pgm  18.pgm  20.pgm  21.pgm  24.pgm  25.pgm  26.pgm  28.pgm  29.pgm  30.pgm  4.pgm  7.pgm  8.pgm
src/friendly_faces/data/leah_holden/: 0.pgm  1.pgm  10.pgm  13.pgm  15.pgm  16.pgm  19.pgm  23.pgm  24.pgm  26.pgm  3.pgm  6.pgm
src/friendly_faces/include/: image_proc.h  storage.h  text.h
src/friendly_faces/include/ff_db/: storage.h  storage.h~
src/friendly_faces/include/ff_monitor/: fps.h
src/friendly_faces/include/ff_proc/: frame_proc.h  image_proc.h  image_proc.h~
src/friendly_faces/include/ff_text/: positioning.h
src/friendly_faces/src/: .main.cpp.swp  fps.cpp  image_proc.cpp  main.cpp  main.cpp~  storage.cpp  text.cpp
src/friendly_faces/src/ff_db/: storage.cpp  storage.cpp~
src/friendly_faces/src/ff_monitor/: fps.cpp
src/friendly_faces/src/ff_proc/: frame_proc.cpp  image_proc.cpp
src/friendly_faces/src/ff_text/: positioning.cpp  positioning.cpp~
