<?xml version="1.0"?>
<package>
	<name>greeter_robot</name>
	<version>0.0.0</version>
	<description>The greeter_robot package</description>

	<maintainer email="anneoursler@gmail.com">Anne Oursler</maintainer>
	<maintainer email="Leah.Holden@Tufts.edu">Leah Holden</maintainer>
	<maintainer email="lmdierker@gmail.com">Lauren Dierker</maintainer>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>turtlesim</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>turtlesim</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>message_runtime</run_depend>

	<export/>
</package>