<?xml version="1.0"?>
<package>
  <name>friendly_faces</name>
  <version>0.0.0</version>
  <description>The friendly_faces package</description>

  <maintainer email="todo@todo.todo">Ailyn Aguirre</maintainer>
  <maintainer email="todo@todo.todo">Anjuli Goring</maintainer>
  <maintainer email="mwebb@utexas.edu">Matthew Webb</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export/>
</package>
